--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -24,12 +24,5 @@ jobs:
       - name: Install dependencies
         run: npm ci      # Use 'yarn install --frozen-lockfile' for Yarn
 
-      - name: Run linter
-        run: npm run lint
-
       - name: Build application
         run: npm run build
-
-      # Optional: Add test step if you have tests
-      # - name: Run tests
-      #   run: npm test
